upddate gradle - had some problems running tests